# tos2ca-aux-geoir

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build_check.yaml
auxgeoir_module/: processing.py
