[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auxgeoir_module"
version = "2.1"
description = "TOS2CA AUX-GEOIR Library"
readme = "README.md"
requires-python = "==3.9.23"
license = { text = "Apache 2.0" }
authors = [
  { name = "Brian Knosp", email = "Brian.Knosp@jpl.nasa.gov" }
]

dependencies = [
  "imageio==2.37.0",
  "lazy_loader==0.4",
  "llvmlite==0.43.0",
  "networkx==3.2.1",
  "numba==0.60.0",
  "numpy==1.24.3",
  "packaging==25.0",
  "pandas==1.5.3",
  "pillow==9.4.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "scikit-image==0.19.3",
  "scipy==1.10.1",
  "six==1.16.0",
  "tifffile==2024.8.30",
  "tqdm==4.67.1",
  "tzdata==2025.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]